@@ -1,3 +1,14 @@
+2000-08-25  Tom Yu  <tlyu@mit.edu>
+
+	* ftpcmd.y: Fix up grammar so that single character token names
+	are no longer used; this was breaking the build using bison on
+	HP/UX because some system headers declare structures with members
+	having all-uppercase field names and bison puts the token name
+	#define statements in front of the C declarations section in the
+	output, causing them to be in force while those headers get
+	#included.  There doesn't seem to be much purpose in not just
+	using character constants, anyway.
+
 Tue Aug 22 11:37:35 2000  Ezra Peisach  <epeisach@mit.edu>
 
 	* secure.h (myaddr): For secure data stream, pass the port number
